feat: Simplify JSONPath and XPath following same pattern as CSVPath
## JSONPath Simplification
- Replaced complex path parsing with simple List<String> paths
- Added support for multiple JSON paths with OR logic
- Implemented findMatchingPaths() for Don't Ask Tell compliance
- Simplified path normalization and validation
- matchesSinglePath() handles individual path matching logic

## XPath Simplification
- Unified single and multiple XPath handling with List<String> paths
- Added OR condition support for multiple XML path matching
- Implemented findMatchingPaths() for external consumption
- Maintained XML element name validation with regex pattern
- matchesSinglePath() compares path segments directly

## Consistent Architecture
All Path classes now follow identical patterns:
- **Single Constructor**: Both single and multiple selector support
- **OR Logic**: matches() method supports multiple paths internally
- **Don't Ask Tell**: findMatchingPaths()/findMatchingIndices() for external use
- **Helper Methods**: matchesSinglePath()/matchesSingleSelector() for clean separation
- **Simple State**: List<String> instead of complex internal structures

## Benefits
- **Consistency**: All Path classes use identical design patterns
- **Simplicity**: Removed complex internal abstractions across all types
- **Extensibility**: Easy to add new path types following same template
- **Maintainability**: Uniform codebase reduces cognitive overhead

All tests passing: 413/413 (100% success rate)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>